--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,18 +1,22 @@
-<button (click)="login()" class="btn btn-primary">Google bejelentkezés</button>
-
 <span class="loading-indicator" *ngIf="loading">
     <mat-spinner></mat-spinner>
 </span>
 
 <div class="main_component">
     <mat-form-field>
-        <mat-label for="email">Email cím: </mat-label><input matInput type="text" [formControl]="email" />
+        <mat-label for="email">Email cím: </mat-label><input matInput type="text" [formControl]="email" required/>
     </mat-form-field>
     <mat-form-field>
-        <mat-label for="password">Jelszó: </mat-label><input matInput type="password" [formControl]="password" />
+        <mat-label for="password">Jelszó: </mat-label>
+        <input matInput [type]="showPassword ? 'text' : 'password'" [formControl]="password" required/>
+        <mat-icon matSuffix (click)="togglePasswordVisibility()">
+            {{showPassword?'visibility_off':'visibility'}}
+        </mat-icon>
     </mat-form-field>
     <span>
         <span><button mat-raised-button color="primary" (click)="loginnew()">Belépés</button></span>
         <span><button mat-raised-button color="primary" [routerLink]="'/signup'">Regisztráció</button></span>
     </span>
+    <span>vagy</span>
+    <button (click)="login()" class="btn btn-primary">Google bejelentkezés</button>
 </div>
