--- a/src/app/pages/signup/signup.component.css
+++ b/src/app/pages/signup/signup.component.css
@@ -31,3 +31,10 @@ form {
 button {
     width: 130px;
 }
+.top{
+    margin-top: 20px;
+}
+.mat-icon{
+    display: inline - flex;
+    vertical-align: middle;
+}
