--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -1,5 +1,5 @@
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+    <nav class="navbar navbar-expand-md navbar-dark bg-success mb-4">
         <a class="navbar-brand" routerLink="/">Családi kisokos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -8,8 +8,8 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto mb-2 mb-md-0">
             <ng-template #anonymousUser>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/login">Bejelentkezés</a>
+                <li class="nav-item ">
+                    <a class="nav-link text-white" routerLink="/login">Bejelentkezés</a>
                 </li>
             </ng-template>
             <li ngbDropdown *ngIf="authService.user$ | async as user; else anonymousUser" class="nav-item dropdown">
@@ -19,7 +19,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="/signup">Regisztráció</a>
+                <a class="nav-link text-white" routerLink="/signup">Regisztráció</a>
             </li>
         </ul>
         </div>
