--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -1,5 +1,5 @@
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-success mb-4">
+    <nav class="navbar navbar-expand-md navbar-dark bg-success sticky">
         <a class="navbar-brand" routerLink="/">Családi kisokos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
