--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -19,6 +19,6 @@
         <span><button mat-raised-button class="btn btn-success" (click)="loginnew()">Belépés</button></span>
         <span><button mat-raised-button class="btn btn-success" [routerLink]="'/signup'">Regisztráció</button></span>
     </span>
-    <span>vagy</span>
-    <button (click)="authService.GoogleAuth()" class="btn btn-success">Google bejelentkezés</button>
+    <!--<span>vagy</span>
+    <<button (click)="authService.GoogleAuth()" class="btn btn-success">Google bejelentkezés</button>-->
 </div>
