--- a/src/app/bs-navbar/bs-navbar.component.css
+++ b/src/app/bs-navbar/bs-navbar.component.css
@@ -3,3 +3,7 @@
     top: 0px; /* When the element reaches top: 10px, it becomes fixed. */
     z-index: 1000;
 }
+
+.navbar-dark .navbar-nav .nav-link {
+    color: white;
+}
