--- a/src/app/bs-navbar/bs-navbar.component.html
+++ b/src/app/bs-navbar/bs-navbar.component.html
@@ -1,4 +1,3 @@
-
     <nav class="navbar navbar-expand-md navbar-dark bg-success sticky">
         <a class="navbar-brand" routerLink="/">Családi kisokos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,7 +5,24 @@
         </button>
     
         <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav mr-auto mb-2 mb-md-0">
+            <ul class="navbar-nav ml-auto mb-2 mb-md-0">
+                <li class="nav-item">
+                    <a class="nav-link text-white" routerLink="/storage">Raktár</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" routerLink="/storage-missing-items">Ajánlott termékek</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" routerLink="/shopping-list">Bevásárlólista</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" routerLink="/shopping-list">Bakancslista</a>
+                </li> 
+                <li class="nav-item">
+                    <a class="nav-link text-white" routerLink="/shopping-list">Kiadásfigyelő</a>
+                </li>    
+            </ul>
+            <ul class="navbar-nav ms-auto mb-2 mb-md-0">
             <ng-template #anonymousUser>
                 <li class="nav-item ">
                     <a class="nav-link text-white" routerLink="/login">Bejelentkezés</a>
