--- a/src/app/pages/storage/storage.component.html
+++ b/src/app/pages/storage/storage.component.html
@@ -1,35 +1,24 @@
+<bs-sidebar></bs-sidebar>
+<section class="section-products">
 <div id="wrapper">
-    <!-- Sidebar -->
-    <div id="sidebar-wrapper">
-        <ul class="sidebar-nav">
-            <li>
-                <a [routerLink]="['/storage']">Minden</a>
-            </li>
-            <li>
-                <a [routerLink]="['/food-storage']">Élelmiszerek</a>
-            </li>
-            <li>
-                <a [routerLink]="['/bathroom-storage']">Fürdőszoba</a>
-            </li>
-            <li>
-                <a [routerLink]="['/cleaning-storage']">Takarítás</a>
-            </li>
-        </ul>
-    </div>
-    <!-- /#sidebar-wrapper -->
-    <!-- Page Content -->
     <div id="page-content-wrapper">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-12">
-                    <h1>Simple Sidebar</h1>
-                    <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                    <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                    <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                <div class="col-md-6 col-lg-4 col-xl-3" *ngFor="let product of products">
+                        <div id="product-1" class="single-product">
+                                <div class="part-1">
+                                        <ul>
+                                                <li><a (click)="getProductsId(product)"><mat-icon>open_in_new</mat-icon></a></li>
+                                        </ul>
+                                </div>
+                                <div class="part-2" class="col-md-8 col-lg-6">
+                                        <h3 class="product-title">{{ product.title }}</h3>
+                                        <h3 class="product-title">{{ product.quantity}}</h3>
+                                </div>
+                        </div>
                 </div>
-            </div>
+        </div>
         </div>
     </div>
-    <!-- /#page-content-wrapper -->
 </div>
-<!-- /#wrapper -->
+</section>
