--- a/src/app/pages/storage/storage.component.html
+++ b/src/app/pages/storage/storage.component.html
@@ -1,5 +1,6 @@
 <bs-sidebar></bs-sidebar>
 <section class="section-products">
+        <button routerLink="/storage-item-add">Elem hozzáadása</button>
 <div id="wrapper">
     <div id="page-content-wrapper">
         <div class="container-fluid">
