--- a/src/app/pages/storage-item/storage-item.component.html
+++ b/src/app/pages/storage-item/storage-item.component.html
@@ -1,1 +1,32 @@
-<p>storage-item works!</p>
+<div  class="grid-container">
+    <mat-card  class="dashboard-card" *ngFor="let product of products">
+        <mat-card-header >
+            <mat-card-title>
+                {{ product.title }}
+            </mat-card-title>
+        </mat-card-header> 
+        <mat-card-content class="dashboard-card-content">
+            <img class="center" src="../../../assets/grocery.jpg"/>
+        </mat-card-content>
+        <p>Elem leírása: </p>
+        <mat-card-content class="dashboard-card-content">
+            <div class="card_text" class="indent">{{ product.description }}</div>
+            <br>
+        </mat-card-content>
+        <p>Otthon található mennyiség: </p>
+        <mat-card-content class="dashboard-card-content">
+            <div class="card_text" class="indent">{{ product.quantity }}</div>
+            <br>
+        </mat-card-content>
+        <p>Elem kategóriája: </p>
+        <mat-card-content class="dashboard-card-content">
+            <div class="card_text" class="indent">{{ product.category }}</div>
+            <br>
+        </mat-card-content>
+    <mat-divider></mat-divider>
+    <br>
+    <button  mat-raised-button color="primary" (click)="changeComponent()" [routerLink]="'/storage-item-update'">Elem módosítása</button>
+    <button  mat-raised-button color="warn" (click)="delete(productsId)" [routerLink]="''">Elem törlése</button>
+    </mat-card>
+</div>
+
