--- a/src/app/pages/storage/storage.component.css
+++ b/src/app/pages/storage/storage.component.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
 
+.container-fluid {
+    margin-top: 50px;
+}
 #wrapper {
     padding-left: 0;
     -webkit-transition: all 0.5s ease;
@@ -19,7 +22,6 @@
 #page-content-wrapper {
     width: 100%;
     position: absolute;
-    padding: 15px;
 }
 
 #wrapper.toggled #page-content-wrapper {
@@ -41,7 +43,6 @@
     }
 
     #page-content-wrapper {
-        padding: 20px;
         position: relative;
     }
 
@@ -64,7 +65,7 @@ a:hover {
 }
 
 .section-products {
-    padding: 80px 0 54px;
+    padding: 10px 0 54px;
 }
 
 .section-products .header {
@@ -178,20 +179,6 @@ a:hover {
 .section-products .single-product .part-2 h4 {
     display:inline-block;
     font-size: 1rem;
-}   
-
-.section-products .single-product .part-2 .product-old-price {
-    position: relative;
-    padding: 0 7px;
-    margin-right: 2px;
-    opacity: 0.6;
-    width: 200px;    
-}
-
-.oldprice{
-    text-decoration: none;
-    text-decoration-line: line-through;
-    color: rgb(187, 165, 165);
 }
 
 .section-products .single-product .part-2 .product-old-price::after {
@@ -213,4 +200,14 @@ input {
     border-width: 3px;
     border-color: black;
     margin-bottom: 50px;
+}
+button {
+    float: right;
+    margin: 10px 20px 30px;
+    border-radius: 8px;
+    background-color: #198754;
+    border: none;
+    font-size: 19px;
+    color: white;
+    cursor:pointer;
 }
