--- a/src/app/pages/storage-item-add/storage-item-add.component.html
+++ b/src/app/pages/storage-item-add/storage-item-add.component.html
@@ -1,29 +1,38 @@
 <div class="main_component">
     <div class="div-flex">
       <h1>Új termék hozzáadása</h1>
-        <form [formGroup]="createProductsForm" novalidate (ngSubmit)="onSubmit()">
+        <form [formGroup]="createProductsForm" novalidate>
             <mat-form-field>
-                <mat-label for="title">Elem neve: </mat-label>
-                <input matInput type="text" formControlName="title">
+                <mat-icon matPrefix>bookmark</mat-icon>
+                <mat-label  for="title">Elem neve: </mat-label>
+                <input matInput type="text"  class="line" formControlName="title">
             </mat-form-field>
             <mat-form-field>
+                <mat-icon matPrefix>apps</mat-icon>
                 <mat-label for="quantity">Mennyiség: </mat-label>
-                <input matInput formControlName="quantity">
+                <input matInput class="line element" formControlName="quantity">
+                <mat-select formControlName="quantity" name="quantity" class="element">
+                    <mat-option *ngFor="let quantity of quantities" [value]="quantity.value">
+                    {{quantity.viewValue}}
+                    </mat-option>
+                </mat-select>
             </mat-form-field>
             <mat-form-field>
+                <mat-icon matPrefix>category</mat-icon>
                 <mat-label for="category">Kategória</mat-label>
-                <mat-select formControlName="category" name="category">
+                <mat-select class="line" formControlName="category" name="category">
                     <mat-option *ngFor="let category of categories" [value]="category.value">
                     {{category.viewValue}}
                     </mat-option>
                 </mat-select>
             </mat-form-field>
             <mat-form-field>
+                <mat-icon matPrefix>assignment</mat-icon>
                 <mat-label for="description">Elem leírása: </mat-label>
-                <textarea matInput type="text" formControlName="description"></textarea>
+                <textarea matInput class="line" type="text" formControlName="description"></textarea>
             </mat-form-field>
             <mat-card-actions>
-                <button mat-raised-button type="submit" [routerLink]="'/storage'">Elem hozzáadása</button>
+                <button mat-raised-button type="button" (click)="onSubmit()" [routerLink]="'/storage'">Elem hozzáadása</button>
             </mat-card-actions>
         </form>
     </div>
