--- a/src/app/pages/storage/storage.component.css
+++ b/src/app/pages/storage/storage.component.css
@@ -93,7 +93,7 @@ a:hover {
     position: relative;
     height: 290px;
     max-height: 290px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     overflow: hidden;
 }
 
@@ -170,6 +170,7 @@ a:hover {
 
 .section-products .single-product .part-1 ul li a:hover {
     color: #fe302f;
+    cursor: pointer;
 }
 
 .section-products .single-product .part-2 .product-title {
