--- a/src/app/pages/storage-item/storage-item.component.html
+++ b/src/app/pages/storage-item/storage-item.component.html
@@ -11,7 +11,7 @@
         <div class="element">
         <p>Otthon található mennyiség: </p>
         <mat-card-content class="dashboard-card-content">
-            <div class="card_text">{{ product.quantity }}</div>
+            <div class="card_text">{{ product.quantity }} {{ product.unit }}</div>
             <br>
         </mat-card-content>
         </div>
