--- a/src/app/pages/storage/storage.component.html
+++ b/src/app/pages/storage/storage.component.html
@@ -14,7 +14,7 @@
                                 </div>
                                 <div class="part-2" class="col-md-8 col-lg-6">
                                         <h3 class="product-title">{{ product.title }}</h3>
-                                        <h3 class="product-title">{{ product.quantity}}</h3>
+                                        <h3 class="product-title">{{ product.quantity}} {{product.unit}}</h3>
                                 </div>
                         </div>
                 </div>
