--- a/src/app/pages/storage-item-update/storage-item-update.component.css
+++ b/src/app/pages/storage-item-update/storage-item-update.component.css
@@ -1,50 +1,65 @@
 .div-flex {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    height: 100%;
-  }
-  
-  .main_component {
-    height: 100vh;
-  }
-  
-  form div {
-    padding: 5px 5px 5px 5px;
-  }
-  
-  form {
-    display: inline-grid;
-    width: 50%;
-    align-self: center;
-  }
-  
-  .subForm {
-    width: 100%;
-    display: inline-grid;
-  }
-  
-  .buttons {
-    padding: 5px;
-  }
-  
-  button {
-    width: 170px;
-    background-color: #198754;
-    color: white
-  }
-  .element {
-    display: inline-block;
-    width: 20%;
-    text-align: center;
-  }
-  .elementother {
-    display: inline-block;
-    width: 80%;
-    text-align: left;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  height: 100%;
+}
+
+.main_component {
+  height: 100vh;
+}
+
+form div {
+  padding: 5px 5px 5px 5px;
+}
+
+form {
+  display: inline-grid;
+  width: 50%;
+  align-self: center;
+}
+
+.subForm {
+  width: 100%;
+  display: inline-grid;
+}
+
+.buttons {
+  padding: 5px;
+}
+
+button {
+  width: 170px;
+  background-color: #198754;
+  color: white
+}
+
+.element {
+  display: inline-block;
+  width: 20%;
+  text-align: center;
+}
+
+.elementother {
+  display: inline-block;
+  width: 80%;
+  text-align: left;
+}
+
 p {
   margin-bottom: 0px;
   color: lightslategray;
+}
+
+.middle {
+  text-align: center;
+  color: red;
+}
+
+.error {
+  display: flex;
+  width: 50%;
+  text-align: center;
+  color: red;
 }
