storage oldal változtatások

--- a/src/app/bs-sidebar/bs-sidebar.component.html
+++ b/src/app/bs-sidebar/bs-sidebar.component.html
@@ -2,20 +2,16 @@
     <div id="sidebar-wrapper">
         <ul class="sidebar-nav">
             <li>
-                <!--<a [routerLink]="['/storage']">Minden</a>-->
-                <a>Minden</a>
+                <a [routerLink]="['/storage']">Minden</a>
             </li>
             <li>
-                <!--<a [routerLink]="['/food-storage']">Élelmiszerek</a>-->
-                <a>Élelmiszerek</a>
+                <a [routerLink]="['/food-storage']">Élelmiszerek</a>
             </li>
             <li>
-                <!--<a [routerLink]="['/bathroom-storage']">Fürdőszoba</a>-->
-                <a>Fürdőszoba</a>
+                <a [routerLink]="['/bathroom-storage']">Fürdőszoba</a>
             </li>
             <li>
-                <!--<a [routerLink]="['/cleaning-storage']">Takarítás</a>-->
-                <a>Takarítás</a>
+                <a [routerLink]="['/cleaning-storage']">Takarítás</a>
             </li>
         </ul>
     </div>
