--- a/src/app/pages/storage-item-add/storage-item-add.component.html
+++ b/src/app/pages/storage-item-add/storage-item-add.component.html
@@ -5,7 +5,7 @@
             <mat-form-field>
                 <mat-icon matPrefix>bookmark</mat-icon>
                 <mat-label  for="title">Elem neve: </mat-label>
-                <input matInput type="text"  class="line" formControlName="title" required>
+                <input matInput type="text" maxlength="15"  class="line" formControlName="title" required>
                 <div class="middle" *ngIf="title?.errors?.['required'] && title?.touched">
                     Név megadása kötelező!
                 </div>
